'fixed' overlap

--- a/src/app/ems-qualifications/qualifications-filter/qualifications-filter.css
+++ b/src/app/ems-qualifications/qualifications-filter/qualifications-filter.css
@@ -5,11 +5,11 @@
 .textbox {
   position: relative;
   display: block;
-  width: 100%;
+  width: 90%;
 }
 
 .textbox input {
-  width: 100%;
+  width: 95%;
   height: 48px;
   padding: 0 44px 0 44px;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
